--- a/src/main/chef/cookbooks/c2c_server/templates/default/backup-dirs.pl.erb
+++ b/src/main/chef/cookbooks/c2c_server/templates/default/backup-dirs.pl.erb
@@ -20,7 +20,7 @@ my $pass_export = "export PASSPHRASE=$encrypt_pass &&";
 
 
 print "Sending backups to s3 \n";
-print `$pass_export $s3_export duplicity --name s3-dirs --archive-dir $archive_dir --encrypt-key $encrypt_key <%= dirs %> --exclude '**' / s3+http://code2cloud.backups/$environment/$hostname/dir`;
+print `$pass_export $s3_export duplicity --name s3-dirs --archive-dir $archive_dir --encrypt-key $encrypt_key --full-if-older-than 30D <%= dirs %> --exclude '**' / s3+http://code2cloud.backups/$environment/$hostname/dir`;
 
 
 print "Done.\n";
