5164: chef scripts should create/update passwords in secure store when appropriate https://q.tasktop.com/alm/#projects/c2c/task/5164 Change-Id: Ia286312e59b239284bb28aaeb36090612d88c5de Reviewed-on: https://q.tasktop.com/alm/s/c2c/gerrit/198 Reviewed-by: Michael Nelson Reviewed-by: Clint Morgan Tested-by: Clint Morgan

--- a/src/main/chef/cookbooks/c2c_hub/templates/default/profile.properties.erb
+++ b/src/main/chef/cookbooks/c2c_hub/templates/default/profile.properties.erb
@@ -9,7 +9,7 @@ profile.serviceProxy.path=<%= node.c2c.hub.service_proxy_path %>
 ssh.server.publicPort=<%= node.c2c.hub.public_ssh_port %>
 ssh.server.port=<%= node.c2c.hub.internal_ssh_port %>
 
-alm.database.password=<%= @profilePwd %>
+alm.database.password=<%= node.c2c.hub.profile_password %>
 alm.database.url=jdbc\:<%= node.c2c.server.jdbc_type %><%= node.c2c.server.jdbc_host %>
 alm.database.username=profile
 
