--- a/src/main/chef/cookbooks/c2c_hub/templates/default/profile.properties.erb
+++ b/src/main/chef/cookbooks/c2c_hub/templates/default/profile.properties.erb
@@ -11,7 +11,7 @@ ssh.server.port=<%= node.c2c.hub.internal_ssh_port %>
 
 alm.database.password=<%= node.c2c.hub.profile_password %>
 alm.database.url=jdbc\:<%= node.c2c.server.jdbc_type %><%= node.c2c.server.jdbc_host %>
-alm.database.username=profile
+alm.database.username=<%= node.c2c.hub.profile_username %>
 
 alm.mailSender.javaMailProperties[mail.smtp.starttls.enable]=<%= node.c2c.mail_sender.starttls %>
 alm.mailSender.port=<%= node.c2c.mail_sender.port %>
