--- a/src/main/chef/cookbooks/c2c_hmaster/templates/default/updateHudsonWars.rb.erb
+++ b/src/main/chef/cookbooks/c2c_hmaster/templates/default/updateHudsonWars.rb.erb
@@ -6,7 +6,12 @@ hudsonBaseDir="<%= node.c2c.hmaster.builds_dir %>/"
 hudsonTemplateWar="<%= node.c2c.server.opt %>/configuration/template/hudson-war/hudson.war"
 hudsonWebappsDir="<%= node.c2c.server.opt %>/webapps"
 
+hudsonHomeDir="<%= node.c2c.hmaster.builds_dir %>"
+configSourceDir="<%= node.c2c.server.opt %>/configuration/template/hudson-home"
+
 removePlugins=<%= node.c2c.hudson.update_plugins %>
+updateConfigXml=<%= node.c2c.hudson.update_config %>
+
 if removePlugins
    puts "removing users plugin data"
    `rm -rf #{hudsonBaseDir}/*/plugins/*`
@@ -36,6 +41,25 @@ Dir.glob("#{hudsonWebappsDir}/*hudson.war") do |webapp|
     `mv #{tempWarLocation}/hudson.war #{webapp}`
     `chown <%= node.tomcat.user %>:<%= node.tomcat.user %> #{webapp}` 
     `rm -rf #{tempWarLocation}`
+    
+    if updateConfigXml
+    	puts "Migrating base config for #{projectId}" 
+	    Dir.glob("#{configSourceDir}/*.xml") do |configFile|
+	    	content = File.read(configFile)
+			migrated_content = content.gsub("${profile.application.identifier}", projectId);
+			orgId=nil
+			orgIndex = projectId.index("_")
+			if orgIndex > 0
+				orgId =projectId[0, orgIndex]
+			end
+			if orgId
+				migrated_content = migrated_content.gsub("${profile.organization.identifier}", orgId)
+			end
+			targetConfigFile = "#{hudsonHomeDir}/#{projectId}/#{File.basename(configFile)}"
+    	    File.open(targetConfigFile, 'w') {|f| f.write(migrated_content) }
+	    end
+    end
+
 end
 
 
