--- a/src/main/chef/cookbooks/c2c_hmaster/templates/default/updateHudsonWars.rb.erb
+++ b/src/main/chef/cookbooks/c2c_hmaster/templates/default/updateHudsonWars.rb.erb
@@ -49,7 +49,7 @@ Dir.glob("#{hudsonWebappsDir}/*hudson.war") do |webapp|
 			migrated_content = content.gsub("${profile.application.identifier}", projectId);
 			orgId=nil
 			orgIndex = projectId.index("_")
-			if orgIndex > 0
+			if orgIndex
 				orgId =projectId[0, orgIndex]
 			end
 			if orgId
